--- a/_pugfiles/header.pug
+++ b/_pugfiles/header.pug
@@ -1,9 +1,9 @@
 mixin nav-content()
   ul
-    li: a(href="{{site.url}}/#about").f3.link About
+    li: a(href="{{site.url}}/about").f3.link About
     li: a(href="{{site.url}}/blog").f3.link Blog
     li: a(href="{{site.url}}/#projects").f3.link Projects
-    li: a(href="{{site.url}}/#contact").f3.link Contact
+    li: a(href="{{site.url}}/#footer").f3.link Contact
 
 .mobile-nav
   +nav-content()
