--- a/_pugfiles/projects.pug
+++ b/_pugfiles/projects.pug
@@ -1,4 +1,4 @@
-.section-projects
+.section-projects#projects
   .cf
     .fl.w-100.w-50-ns.tc.pa3.pb4.proj-left-col
       ul.list.pl0.ml0.center.mw5.ba.b--near-black.br3.mt5-ns.bw2
