--- a/assets/css/3-sections/_footer.sass
+++ b/assets/css/3-sections/_footer.sass
@@ -1,5 +1,9 @@
-.contact-links
+.section-footer
   background: $contact-bg
+  min-height: 300px
 
   .contact-tag
     color: $text-color
+
+  .contact-bubble
+    top: -5.25rem
