--- a/assets/css/3-sections/_footer.sass
+++ b/assets/css/3-sections/_footer.sass
@@ -1,9 +1,18 @@
 .section-footer
   background: $contact-bg
-  min-height: 300px
+
 
   .contact-tag
     color: $text-color
 
-  .contact-bubble
-    top: -5.25rem
+  .twitter-bubble-child
+    height: 91px
+    width: 66.75px
+    top: -1rem
+    right: 4rem
+
+  .email-bubble-child
+    height: 91px
+    width: 64px
+    top: -1rem
+    left: 4rem
